font issues, in deployment

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Ele Types",
-  "name": "Ele types typing test website",
+  "short_name": "Turtle types",
+  "name": "Turtle types typing test website",
   "icons": [
     {
       "src": "favicon.ico",
