package json upodate

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Dyan-p0l.github.io/turtletype",
+  "homepage": "http://Dyan-p0l.github.io/turtletyping-web",
   "name": "turtletype",
   "version": "0.3.4",
   "private": true,
